# AlmostAgricola

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.travis/cmake/: CodeCoverage.cmake
docs/: CMakeSettings.json  DoxygenMainPage.md
docs/UML/: README.md
docs/UML/src/: ClassUML.puml
ext/: CMakeLists.txt
ext/googletest/: CMakeLists.txt
ext/imgui/: CMakeLists.txt
ext/imgui-sfml/: CMakeLists.txt
ext/json/: CMakeLists.txt
ext/sfml/: CMakeLists.txt
include/: AbstractList.hh  ActionButton.hh  Actions.hh  Application.hh  ConcreteGameStrategy.hh  Farm.hh  File.hh  Game.hh  GameStrategy.hh  Iterator.hh  Json.hh  JsonLang.hh  Model.hh  Observer.hh  Player.hh  PlayerIterator.hh  PlayerList.hh  PlayerTexture.hh  Points.hh  Resource.hh  Save.hh  Sender.hh  Settings.hh  Shared.hh  Upgrade.hh  View.hh  ViewAbstract.hh  ViewController.hh  ViewGame.hh  ViewMenu.hh  Warehouse.hh  Window.hh
res/cnf/: 1280.ini  800.ini  800_600.ini  800_600_mainMenu.ini  imgui.ini  settings.json
res/img/: Credits.md
res/lang/: eng.json  pl.json
res/lang/eng/: actions.json  game.json
src/: ActionButton.cc  Application.cc  ConcreteGameStrategy.cc  Farm.cc  File.cc  Game.cc  Json.cc  JsonLang.cc  Model.cc  Observer.cc  Player.cc  PlayerTexture.cc  Points.cc  Resource.cc  Save.cc  Sender.cc  Settings.cc  Upgrade.cc  View.cc  ViewAbstract.cc  ViewController.cc  ViewGame.cc  ViewMenu.cc  Warehouse.cc  Window.cc  main.cc
test/: ActionButtonTest.cc  ActionsTest.cc  ConcreteGameStrategyTest.cc  FarmTest.cc  FileTest.cc  GameTest.cc  JsonLangTest.cc  JsonTest.cc  ModelTest.cc  PlayerIteratorTest.cc  PlayerTest.cc  PlayerTextureTest.cc  PointsTest.cc  ResourceTest.cc  SettingsTest.cc  UpgradeTest.cc  WarehouseTest.cc
tmp/: Farm.hh
